Projeto_compilador/ExprParser.py
# Generated from Expr.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExprParser ( Parser ):

    grammarFileName = "Expr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'@start'", "'@end'", "'roar'", "'as'", 
                     "'int'", "'text'", "'hunt'", "'roarout'", "'if'", "'then'", 
                     "'else'", "'while'", "'strike'", "'=='", "'!='", "'<'", 
                     "'>'", "'<='", "'>='", "'+'", "'-'", "'*'", "'/'", 
                     "'&&'", "'||'", "'!'", "'='", "'('", "')'", "'{'", 
                     "'}'", "';'" ]

    symbolicNames = [ "<INVALID>", "START", "END", "ROAR", "AS", "INT", 
                      "TEXT", "HUNT", "ROAROUT", "IF", "THEN", "ELSE", "WHILE", 
                      "STRIKE", "EQUALS", "NOT_EQUALS", "LESS", "GREATER", 
                      "LESS_EQUALS", "GREATER_EQUALS", "PLUS", "MINUS", 
                      "MULT", "DIV", "AND", "OR", "NOT", "ASSIGN", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "SEMICOLON", "ID", "NUMBER", 
                      "STRING", "WS", "COMMENT", "ErrorChar" ]

    RULE_program = 0
    RULE_declarations = 1
    RULE_declaration = 2
    RULE_variableDeclaration = 3
    RULE_type = 4
    RULE_command = 5
    RULE_inputCommand = 6
    RULE_outputCommand = 7
    RULE_assignment = 8
    RULE_ifCommand = 9
    RULE_whileCommand = 10
    RULE_block = 11
    RULE_expression = 12
    RULE_arithmeticExpression = 13
    RULE_term = 14
    RULE_arithmeticOperator = 15
    RULE_termOperator = 16
    RULE_factor = 17
    RULE_logicalExpression = 18
    RULE_logicalTerm = 19
    RULE_logicalFactor = 20
    RULE_comparison = 21
    RULE_comparisonOperator = 22

    ruleNames =  [ "program", "declarations", "declaration", "variableDeclaration", 
                   "type", "command", "inputCommand", "outputCommand", "assignment", 
                   "ifCommand", "whileCommand", "block", "expression", "arithmeticExpression", 
                   "term", "arithmeticOperator", "termOperator", "factor", 
                   "logicalExpression", "logicalTerm", "logicalFactor", 
                   "comparison", "comparisonOperator" ]

    EOF = Token.EOF
    START=1
    END=2
    ROAR=3
    AS=4
    INT=5
    TEXT=6
    HUNT=7
    ROAROUT=8
    IF=9
    THEN=10
    ELSE=11
    WHILE=12
    STRIKE=13
    EQUALS=14
    NOT_EQUALS=15
    LESS=16
    GREATER=17
    LESS_EQUALS=18
    GREATER_EQUALS=19
    PLUS=20
    MINUS=21
    MULT=22
    DIV=23
    AND=24
    OR=25
    NOT=26
    ASSIGN=27
    LPAREN=28
    RPAREN=29
    LBRACE=30
    RBRACE=31
    SEMICOLON=32
    ID=33
    NUMBER=34
    STRING=35
    WS=36
    COMMENT=37
    ErrorChar=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



        def notifyErrorListeners(self, offendingToken, msg, e):
            line = offendingToken.line
            column = offendingToken.column
            tokenText = offendingToken.text
            expected = msg.split("expecting")[-1] if "expecting" in msg else "outro token"
            raise Exception(f"ERRO SINTÁTICO na linha {line}, coluna {column}: encontrado '{tokenText}', esperado {expected}")



    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def START(self):
            return self.getToken(ExprParser.START, 0)

        def declarations(self):
            return self.getTypedRuleContext(ExprParser.DeclarationsContext,0)


        def END(self):
            return self.getToken(ExprParser.END, 0)

        def EOF(self):
            return self.getToken(ExprParser.EOF, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = ExprParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(ExprParser.START)
            self.state = 47
            self.declarations()
            self.state = 48
            self.match(ExprParser.END)
            self.state = 49
            self.match(ExprParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(ExprParser.DeclarationContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_declarations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarations" ):
                listener.enterDeclarations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarations" ):
                listener.exitDeclarations(self)




    def declarations(self):

        localctx = ExprParser.DeclarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declarations)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8589939592) != 0):
                self.state = 51
                self.declaration()
                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(ExprParser.VariableDeclarationContext,0)


        def command(self):
            return self.getTypedRuleContext(ExprParser.CommandContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = ExprParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaration)
        try:
            self.state = 59
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.variableDeclaration()
                pass
            elif token in [7, 8, 9, 12, 33]:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.command()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ROAR(self):
            return self.getToken(ExprParser.ROAR, 0)

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def AS(self):
            return self.getToken(ExprParser.AS, 0)

        def type_(self):
            return self.getTypedRuleContext(ExprParser.TypeContext,0)


        def SEMICOLON(self):
            return self.getToken(ExprParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)




    def variableDeclaration(self):

        localctx = ExprParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variableDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(ExprParser.ROAR)
            self.state = 62
            self.match(ExprParser.ID)
            self.state = 63
            self.match(ExprParser.AS)
            self.state = 64
            self.type_()
            self.state = 65
            self.match(ExprParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(ExprParser.INT, 0)

        def TEXT(self):
            return self.getToken(ExprParser.TEXT, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)




    def type_(self):

        localctx = ExprParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            _la = self._input.LA(1)
            if not(_la==5 or _la==6):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def inputCommand(self):
            return self.getTypedRuleContext(ExprParser.InputCommandContext,0)


        def outputCommand(self):
            return self.getTypedRuleContext(ExprParser.OutputCommandContext,0)


        def ifCommand(self):
            return self.getTypedRuleContext(ExprParser.IfCommandContext,0)


        def whileCommand(self):
            return self.getTypedRuleContext(ExprParser.WhileCommandContext,0)


        def assignment(self):
            return self.getTypedRuleContext(ExprParser.AssignmentContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)




    def command(self):

        localctx = ExprParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_command)
        try:
            self.state = 74
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.inputCommand()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.outputCommand()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 71
                self.ifCommand()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 4)
                self.state = 72
                self.whileCommand()
                pass
            elif token in [33]:
                self.enterOuterAlt(localctx, 5)
                self.state = 73
                self.assignment()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InputCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HUNT(self):
            return self.getToken(ExprParser.HUNT, 0)

        def LPAREN(self):
            return self.getToken(ExprParser.LPAREN, 0)

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def RPAREN(self):
            return self.getToken(ExprParser.RPAREN, 0)

        def SEMICOLON(self):
            return self.getToken(ExprParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_inputCommand

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInputCommand" ):
                listener.enterInputCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInputCommand" ):
                listener.exitInputCommand(self)




    def inputCommand(self):

        localctx = ExprParser.InputCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_inputCommand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(ExprParser.HUNT)
            self.state = 77
            self.match(ExprParser.LPAREN)
            self.state = 78
            self.match(ExprParser.ID)
            self.state = 79
            self.match(ExprParser.RPAREN)
            self.state = 80
            self.match(ExprParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OutputCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ROAROUT(self):
            return self.getToken(ExprParser.ROAROUT, 0)

        def LPAREN(self):
            return self.getToken(ExprParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(ExprParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(ExprParser.RPAREN, 0)

        def SEMICOLON(self):
            return self.getToken(ExprParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_outputCommand

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOutputCommand" ):
                listener.enterOutputCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOutputCommand" ):
                listener.exitOutputCommand(self)




    def outputCommand(self):

        localctx = ExprParser.OutputCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_outputCommand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(ExprParser.ROAROUT)
            self.state = 83
            self.match(ExprParser.LPAREN)
            self.state = 84
            self.expression(0)
            self.state = 85
            self.match(ExprParser.RPAREN)
            self.state = 86
            self.match(ExprParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(ExprParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(ExprParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(ExprParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = ExprParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(ExprParser.ID)
            self.state = 89
            self.match(ExprParser.ASSIGN)
            self.state = 90
            self.expression(0)
            self.state = 91
            self.match(ExprParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(ExprParser.IF, 0)

        def expression(self):
            return self.getTypedRuleContext(ExprParser.ExpressionContext,0)


        def THEN(self):
            return self.getToken(ExprParser.THEN, 0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.BlockContext)
            else:
                return self.getTypedRuleContext(ExprParser.BlockContext,i)


        def ELSE(self):
            return self.getToken(ExprParser.ELSE, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_ifCommand

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfCommand" ):
                listener.enterIfCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfCommand" ):
                listener.exitIfCommand(self)




    def ifCommand(self):

        localctx = ExprParser.IfCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_ifCommand)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(ExprParser.IF)
            self.state = 94
            self.expression(0)
            self.state = 95
            self.match(ExprParser.THEN)
            self.state = 96
            self.block()
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 97
                self.match(ExprParser.ELSE)
                self.state = 98
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(ExprParser.WHILE, 0)

        def expression(self):
            return self.getTypedRuleContext(ExprParser.ExpressionContext,0)


        def STRIKE(self):
            return self.getToken(ExprParser.STRIKE, 0)

        def block(self):
            return self.getTypedRuleContext(ExprParser.BlockContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_whileCommand

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileCommand" ):
                listener.enterWhileCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileCommand" ):
                listener.exitWhileCommand(self)




    def whileCommand(self):

        localctx = ExprParser.WhileCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_whileCommand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(ExprParser.WHILE)
            self.state = 102
            self.expression(0)
            self.state = 103
            self.match(ExprParser.STRIKE)
            self.state = 104
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(ExprParser.LBRACE, 0)

        def declarations(self):
            return self.getTypedRuleContext(ExprParser.DeclarationsContext,0)


        def RBRACE(self):
            return self.getToken(ExprParser.RBRACE, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = ExprParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(ExprParser.LBRACE)
            self.state = 107
            self.declarations()
            self.state = 108
            self.match(ExprParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ExprParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class StringExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(ExprParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringExpr" ):
                listener.enterStringExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringExpr" ):
                listener.exitStringExpr(self)


    class LogicExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def logicalExpression(self):
            return self.getTypedRuleContext(ExprParser.LogicalExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicExpr" ):
                listener.enterLogicExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicExpr" ):
                listener.exitLogicExpr(self)


    class NumberExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(ExprParser.NUMBER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumberExpr" ):
                listener.enterNumberExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumberExpr" ):
                listener.exitNumberExpr(self)


    class ArithExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def arithmeticExpression(self):
            return self.getTypedRuleContext(ExprParser.ArithmeticExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithExpr" ):
                listener.enterArithExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithExpr" ):
                listener.exitArithExpr(self)


    class ParenExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(ExprParser.LPAREN, 0)
        def expression(self):
            return self.getTypedRuleContext(ExprParser.ExpressionContext,0)

        def RPAREN(self):
            return self.getToken(ExprParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenExpr" ):
                listener.enterParenExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenExpr" ):
                listener.exitParenExpr(self)


    class IdExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdExpr" ):
                listener.enterIdExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdExpr" ):
                listener.exitIdExpr(self)


    class ConcatExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExpressionContext,i)

        def PLUS(self):
            return self.getToken(ExprParser.PLUS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConcatExpr" ):
                listener.enterConcatExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConcatExpr" ):
                listener.exitConcatExpr(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ExprParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 24
        self.enterRecursionRule(localctx, 24, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = ExprParser.LogicExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 111
                self.logicalExpression()
                pass

            elif la_ == 2:
                localctx = ExprParser.ArithExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 112
                self.arithmeticExpression()
                pass

            elif la_ == 3:
                localctx = ExprParser.StringExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 113
                self.match(ExprParser.STRING)
                pass

            elif la_ == 4:
                localctx = ExprParser.IdExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 114
                self.match(ExprParser.ID)
                pass

            elif la_ == 5:
                localctx = ExprParser.NumberExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 115
                self.match(ExprParser.NUMBER)
                pass

            elif la_ == 6:
                localctx = ExprParser.ParenExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 116
                self.match(ExprParser.LPAREN)
                self.state = 117
                self.expression(0)
                self.state = 118
                self.match(ExprParser.RPAREN)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 127
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ExprParser.ConcatExprContext(self, ExprParser.ExpressionContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                    self.state = 122
                    if not self.precpred(self._ctx, 7):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                    self.state = 123
                    self.match(ExprParser.PLUS)
                    self.state = 124
                    self.expression(8) 
                self.state = 129
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ArithmeticExpressionContext(ParserRuleContext):
        __slots__ = 'parser'
